examples/test/testpolicy6683.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6683
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key31: value32
      key0: value15
      key18: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value42
      podSelector:
        matchLabels:
          key24: value25
